##### Mon 18/06/2012
* op_deduct() in netlist::Range is rewritten along with op_normalise_tree().
* Seems like I have finally settle down how to implement range operations. Good!

##### Sun 17/06/2012
* Finally find out that it is kind impossible (or too difficult) to do range operations with variables when the maximal 
  range is unknown. However, when the maximal range is provided, all range expression can be reduced to const range which
  significantly reduce all calculations. The bad news is, all operations are going to be re-write for the third time in 
  these couple of weeks! 
* Add op_and in netlist::RangeArrayCommon for multi-dimension & operation.
* Add op_and_tree in netlist::Range for multi-dimension range & operation.

##### Sat 16/06/2012
* Rewrite >=, <= and == of netlist::Range.

##### Fri 15/06/2012
* Rewrite the & and | operations for netlist::Range to const functions as it will be too complicated to handle range 
  expressions with real VIdentifiers.
* Set up a new class netlist::RangeArrayCommon as the common base class of RangeArray and Range to handled the range array
  related operations, otherwise the same member function are to be defined twice.

##### Thu 14/06/2012
* Add a new class namely netlist::RangeArray to handled multi-dimension range operations. In process.
* Add &, |, >=, and - operation to netlist::Range classes.
* Add >, >=, <, <= to netlist::Number classes.

##### Wed 13/06/2012
* Add elaborate() to netlist::CaseState and netlist::CaseItem. Error types and result types are added accordingly.

##### Tue 12/06/2012
* Add removal and reduction in netlist::Block.
* Add another return value in elaborate(), elab_result_t result, to identifier the required operation in the upper level, 
  such as removal or further reduction.
* Fix the bug in reduce concatenations such as {32{1'b0}}.

##### Mon 11/06/2012
* Add elaborate() in netlist::SeqBlock, netlist::IfState, netlist::Block, netlist::Assign.