@@ -1,3 +1,4 @@
+* 18/06/2012   (**Normal    )   Need serious test for the range array operations.
 * 13/06/2012   (**Important )   Process of reducing Case statement in Block, SeqBlock and GenBlock.
 * 12/06/2012   (**Important )   Need serious test for Elab_empty and Elab_Const_If reduction in Block, SeqBlock and GenBlock.
 * 11/06/2012   (**Normal    )   + and - for Numbers with x or z generate asserion failures as not supported yet.
