@@ -38,11 +38,16 @@ namespace netlist {
     RangeArrayCommon(const std::list<boost::shared_ptr<Range> >& rhs) : child(rhs) {}
 
     // helpers
+    bool is_valuable() const;
+    bool is_empty() const { return child.empty(); }
+    unsigned int size() const { return child.size(); }
+    Range& front() { return *(child.front()); }
+    const Range& front() const { return *(child.front()); }
     std::list<boost::shared_ptr<Range> > const_copy(const Range& maxRange) const;
     // get the shared range of two range arrays
     std::list<boost::shared_ptr<Range> > op_and(const std::list<boost::shared_ptr<Range> >&) const;
     // get the combined range of two range arrays
-    std::list<boost::shared_ptr<Range> > op_or(const std::list<boost::shared_ptr<Range> >&) const;  
+    std::list<boost::shared_ptr<Range> > op_or(const std::list<boost::shared_ptr<Range> >&, const Range& maxRange) const;  
     // check whether two range arrays are equal
     bool op_equ(const std::list<boost::shared_ptr<Range> >&) const; 
     void const_reduce(const Range& maxRange);    // try to reduce the range array using symbolic mathod
@@ -52,6 +57,10 @@ namespace netlist {
     
   protected:
     std::list<boost::shared_ptr<Range> > child; // the range expressions of the lower dimension
+
+  private:
+    // re-order a list of range expressions
+    void sort(std::list<boost::shared_ptr<Range> >&) const; 
 
   };
 
